--- a/SurfsUp/SurfsUpBlazorApp/Pages/Index.razor
+++ b/SurfsUp/SurfsUpBlazorApp/Pages/Index.razor
@@ -5,6 +5,7 @@
 @using Microsoft.EntityFrameworkCore;
 @using Microsoft.AspNetCore.Authorization;
 @using System.Data;
+@using System.Globalization
 @inject HttpClient Http
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager navManager
@@ -54,7 +55,7 @@ else
                             <td>@board.Price</td>
                             <td>@board.Equipment</td>
                             <td>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Lej</button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" @onclick="()=>SetBoard(board.Id)" data-target="#exampleModal">Lej</button>
                                 @*<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">*@
                             </td>
                         </tr>
@@ -72,29 +73,26 @@ else
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <div class="input-group date" data-provide="datepicker">
-                                    <input type="text" class="form-control">
-                                    <div class="input-group-addon">
-                                        <span class="glyphicon glyphicon-th"></span>
-                                    </div>
-                                </div>
+                                <label for="birthdaytime">Udlejningsdag (date):</label>
+                                <input type="datetime-local" @bind="StartDate">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Luk</button>
+                                <button type="button" @onclick="StartRenting" class="btn btn-primary">Gem</button>
                             </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
                         </div>
                     </div>
                 </div>
             </div>
-
-
         </tbody>
     </table>
 
 }
 
 @code {
+    [Parameter]
+    public DateTime StartDate { get; set; } = DateTime.Now;
+
+    public Guid CurrentBoardId { get; set; }
+
     private Board[]? boards;
 
     //Array of temporary boards to reset the value of the "boards" array when searching
@@ -102,6 +100,11 @@ else
 
     [Parameter]
     public string SearchWord { get; set; }
+
+    public void SetBoard(Guid boardId)
+    {
+        CurrentBoardId = boardId;
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -125,6 +128,61 @@ else
 
 
         tempBoards = boards;
+    }
+
+
+
+    public async void StartRenting()
+    {
+        //SetStartDate(startDate);
+        var authstate = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
+
+        //Checks if the user is logged in, if not, it will set the userId to a guest account's userId
+        if (authstate.User.Identity.IsAuthenticated == true)
+        {
+            var user = authstate.User.Claims.First().Value;
+            await Rent(Http, user,CurrentBoardId);
+        }
+        else
+        {
+            string user = "2ed315c0-1ca2-4a4b-aedf-70fa672ca7e8";
+            await Rent(Http, user, CurrentBoardId);
+        }
+    }
+
+    public async Task Rent(HttpClient client, string userId, Guid id)
+    {
+        string createddate = Convert.ToDateTime(StartDate).ToString("yyyy-MM-dd HH:mm:ss.fffffff");
+        DateTime date = DateTime.ParseExact(createddate, "yyyy-MM-dd HH:mm:ss.fffffff", CultureInfo.InvariantCulture);
+        await client.GetStringAsync($"https://localhost:7154/rent?userId={userId}&id={id}&startDate={date}");
+        await GetBoards();
+        navManager.NavigateTo("/Confirmation");
+    }
+    public void Search()
+    {
+        //Resetting the boards array so the user can search between all boards and not the preveously searched boards
+        boards = tempBoards;
+        Board[] searchedBoards = new Board[boards.Length];
+        int currentArraySize = 0;
+
+        //Converting the searched words to upper so the program wont care about small or big letters
+        string search = SearchWord.ToUpper();
+
+        if (SearchWord == null)
+        {
+            SearchWord = "";
+        }
+
+        for (int i = 0; i < boards.Length; i++)
+        {
+            //Converting the board names to upper so the program wont care about small or big letters like before
+            if (boards[i].Name.ToUpper().Contains(search) || boards[i].Type.ToUpper().Contains(search))
+            {
+                searchedBoards[currentArraySize] = boards[i];
+                currentArraySize++;
+            }
+        }
+        boards = searchedBoards;
     }
 
     public class Board
@@ -160,55 +218,5 @@ else
 
 
         public byte[] RowVersion { get; set; }
-    }
-
-    public async void StartRenting(Guid boardId)
-    {
-        var authstate = await GetAuthenticationStateAsync.GetAuthenticationStateAsync();
-
-        //Checks if the user is logged in, if not, it will set the userId to a guest account's userId
-        if (authstate.User.Identity.IsAuthenticated == true)
-        {
-            var user = authstate.User.Claims.First().Value;
-            await Rent(Http, user, boardId);
-        }
-        else
-        {
-            string user = "2ed315c0-1ca2-4a4b-aedf-70fa672ca7e8";
-            await Rent(Http, user, boardId);
-        }
-    }
-
-    public async Task Rent(HttpClient client, string userId, Guid id)
-    {
-        await client.GetStringAsync($"https://localhost:7154/rent?userId={userId}&id={id}");
-        await GetBoards();
-        navManager.NavigateTo("/Confirmation");
-    }
-    public void Search()
-    {
-        //Resetting the boards array so the user can search between all boards and not the preveously searched boards
-        boards = tempBoards;
-        Board[] searchedBoards = new Board[boards.Length];
-        int currentArraySize = 0;
-
-        //Converting the searched words to upper so the program wont care about small or big letters
-        string search = SearchWord.ToUpper();
-
-        if (SearchWord == null)
-        {
-            SearchWord = "";
-        }
-
-        for (int i = 0; i < boards.Length; i++)
-        {
-            //Converting the board names to upper so the program wont care about small or big letters like before
-            if (boards[i].Name.ToUpper().Contains(search) || boards[i].Type.ToUpper().Contains(search))
-            {
-                searchedBoards[currentArraySize] = boards[i];
-                currentArraySize++;
-            }
-        }
-        boards = searchedBoards;
     }
 }
