--- a/SurfsUp/SurfsUpBlazorApp/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/SurfsUp/SurfsUpBlazorApp/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -18,7 +18,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/RegisterRenter">Tilmeld som udlejer</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Tilmeld</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
