--- a/SurfsUp/SurfsUpBlazorApp/Pages/Index.razor
+++ b/SurfsUp/SurfsUpBlazorApp/Pages/Index.razor
@@ -34,7 +34,7 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>BoardIMG</th>
+                <th></th>
                 <th>Name</th>
                 <th>Length</th>
                 <th>Width</th>
@@ -169,7 +169,7 @@ else
         var createddate = Convert.ToDateTime(StartDate).ToString("yyyy-MM-dd HH:mm:ss.fffffff");
         await client.GetStringAsync($"https://localhost:7154/rent?userId={userId}&id={id}&startDate={createddate}");
         await GetBoards();
-        navManager.NavigateTo("/Confirmation");
+        navManager.NavigateTo("/ConfirmationPage", true);
     }
     public void Search()
     {
