--- a/SurfsUp/SurfsUpBlazorApp/_Imports.razor
+++ b/SurfsUp/SurfsUpBlazorApp/_Imports.razor
@@ -11,3 +11,4 @@
 @using System.Net.Http.Json
 @using System.Net.Http.Headers
 @using Newtonsoft.Json.Serialization
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
