--- a/SurfsUp/SurfsUpBlazorApp/Pages/Shared/_LoginPartial.cshtml
+++ b/SurfsUp/SurfsUpBlazorApp/Pages/Shared/_LoginPartial.cshtml
@@ -17,11 +17,14 @@
 }
 else
 {
+        <li class="nav-item">
+            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Registrer som udlejer</a>
+        </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Registrer</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Log ind</a>
     </li>
 }
 </ul>
